--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .container {
 	position: relative;
 	margin: 0 auto;
-	width: 1170px;
+	width: 90%;
 }
 
 .content {
@@ -9,5 +9,24 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 40%;
+	width: 500px;
+}
+
+.concha {
+	margin: 0 auto 20px;
+	max-width: 300px;
+}
+
+.Button {
+	background-color: #ce9cd7;
+}
+
+.Button:hover {
+	background-color: #ba87c4;
+}
+
+@media only screen and (max-width: 768px) {
+ 	.content {
+ 		width: 90%;
+ 	}
 }
