--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 	position: relative;
 	margin: 0 auto;
 	width: 90%;
+	height: 100vh;
 }
 
 body {
@@ -11,13 +12,35 @@ body {
 }
 
 .content {
-	margin: 150px auto;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	width: 500px;
 }
 
 .concha {
 	margin: 0 auto 20px;
 	max-width: 300px;
+}
+
+.pino {
+	position: absolute;
+    top: 54px;
+    right: 70px;
+    max-width: 30px;
+}
+
+.pino .linha {
+	display: block;
+	position: absolute;
+	right: 17px;
+	top: 43px;
+	width: 60px;
+	height: 2px;
+	background: #fff;
+	transform: rotate(-45deg);
+	z-index: -1;
 }
 
 .Button {
